samples/_failures_safe/1761218050_2279d5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_87c4719c.c: In function ‘main’:
./samples/SAFE/__tmp_87c4719c.c:162:9: error: expected declaration or statement at end of input
  162 |         switch (choice) {
      |         ^~~~~~
./samples/SAFE/__tmp_87c4719c.c:162:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_87c4719c.c:162:9: error: expected declaration or statement at end of input
